# unica

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/: ci-gate-probe.txt
.github/workflows/: publish-unica-marketplace.yml  unica-legacy-migration.yml  unica-plugin-release.yml
.superpowers/sdd/: cancellable-task-3-report.md
assessments/: index.html
assessments/latest/: assessment.json  assessment.ndjson  index.html  summary.md
crates/unica-bootstrap/: Cargo.toml
crates/unica-bootstrap/src/: archive.rs  cache.rs  codex.rs  download.rs  error.rs  lib.rs  main.rs  manifest.rs  migration.rs  process.rs  target.rs  verification.rs
crates/unica-bootstrap/src/platform/: entrypoint.rs  filesystem.rs  mod.rs  process.rs
crates/unica-bootstrap/tests/: cli_contract.rs  manifest_contract.rs  migration_contract.rs  runtime_install.rs  verification_contract.rs
crates/unica-bootstrap/tests/fixtures/: plugins-empty.json
crates/unica-bootstrap/tests/fixtures/codex-0.145.0-alpha.18/: README.md  marketplaces-local.json  metadata.json  plugins-installed.json
crates/unica-coder/: Cargo.toml
crates/unica-coder/src/: composition.rs  lib.rs  main.rs
crates/unica-coder/src/application/: mod.rs  operation_descriptors.rs  outcome.rs  ports.rs  source_sync.rs  source_sync_integration_tests.rs  tool_contracts.rs
crates/unica-coder/src/application/discovery/: contract.rs  determinism.rs  evidence_graph.rs  mod.rs  model.rs  ports.rs  proposal_validator.rs  use_case.rs
crates/unica-coder/src/domain/: cache.rs  cancellation.rs  discovery.rs  discovery_registry.rs  events.rs  form_edit.rs  i_json.rs  mod.rs  navigation.rs  project_sources.rs  source_roots.rs  source_snapshot.rs  source_sync.rs  workspace.rs
crates/unica-coder/src/domain/branched_development/: canonical_json.rs  identifiers.rs  mod.rs  operation.rs  operation_preflight.rs  vocabulary.rs
crates/unica-coder/src/domain/branched_development/contracts/: actions.rs  artifacts.rs  change_receipts.rs  envelope.rs  errors.rs  instructions.rs  mod.rs  prearm_recovery.rs  recovery.rs  registry.rs  repository.rs  scalars.rs  schema.rs  selectors.rs  status.rs  storage.rs  support.rs  support_recovery_authority.rs  support_terminalization.rs
crates/unica-coder/src/domain/branched_development/contracts/repository/: lifecycle.rs  update.rs
crates/unica-coder/src/domain/branched_development/contracts/requests/: delivery.rs  merge.rs  mod.rs  repository.rs  task.rs
crates/unica-coder/src/domain/branched_development/contracts/results/: delivery.rs  merge.rs  mod.rs  repository.rs  repository_arm.rs  task.rs
crates/unica-coder/src/domain/branched_development/contracts/support/: authorization.rs  evidence.rs  model.rs  preflight.rs  version_observation.rs
crates/unica-coder/src/infrastructure/: application_ports.rs  bounded_file.rs  bundled_tools.rs  contained_fs.rs  extension_point_discovery.rs  format_guard.rs  internal_adapters.rs  legacy_scripts.rs  managed_child.rs  metadata_kinds.rs  mod.rs  native_operations.rs  path_policy.rs  platform_xml.rs  platform_xml_owner.rs  plugin_runtime.rs  project_sources.rs  redaction.rs  runtime_jobs.rs  shadow_dump.rs  source_roots.rs  source_snapshot.rs  source_sync.rs  support_guard.rs  tool_context.rs  workspace.rs  workspace_index.rs  workspace_services.rs
crates/unica-coder/src/infrastructure/discovery/: bsl.rs  forms.rs  inventory.rs  metadata.rs  mod.rs  support.rs
crates/unica-coder/src/infrastructure/native_operations/: cf.rs  cfe.rs  code.rs  common.rs  compile_transaction.rs  dcs.rs  external.rs  form.rs  form_event_registry.rs  help.rs  interface.rs  meta.rs  mxl.rs  registry.rs  role.rs  single_file_publisher.rs  skd.rs  subsystem.rs  support.rs  template.rs  tests.rs  typed_result.rs
crates/unica-coder/src/infrastructure/platform/: contained_file.rs  entrypoint.rs  filesystem.rs  full_dump_publication.rs  mod.rs  process.rs  target.rs  testing.rs  verified_directory.rs
crates/unica-coder/src/interfaces/: mcp.rs  mod.rs  runtime_job_worker.rs  strict_json.rs
crates/unica-coder/tests/: cf_init_platform_contract.rs  issue_89_workspace_service.rs  platform_external_init.rs  source_root_public_api.rs
crates/unica-coder/tests/platform/: external_init_symlink.rs
docs/: donor-skill-parity.md
docs/releases/: v0.6.1.md  v0.7.0.md  v0.7.1.md  v0.7.2.md  v0.7.3.md  v0.7.5.md  v0.7.6.md  v0.7.7.md  v0.7.8.md  v0.8.0.md  v0.8.1.md
docs/research/: 2026-07-24-cc-1c-skills-gap-analysis.md
plugins/unica/: ATTRIBUTIONS.md  README.md  runtime-manifest.json
scripts/: install-unica.ps1  install-unica.sh
scripts/ci/: build-unica-tools.py  capture-codex-contract.py  check-attributions.py  check-rust-platform-boundary.py  check-skill-upstreams.py  check-tool-contracts.py  check-version-contract.py  classify-workflow-changes.py  donor_parity_contract.py  evaluate-ci-gate.py  generate-donor-skill-matrix.py  harvest-bsp-parity-fixtures.py  package-unica-plugin.py  package-unica-runtime.py  refresh-cc-1c-parity.py  release-assessment.py  smoke-unica-bootstrap.py  smoke-unica-mcp.py  test-unica-upgrade.ps1  verify-release-assets.py
scripts/dev/: download-1ci-guides.py  install-local-unica.sh
spec/: 0126-platform-8-3-27-deviation-matrix.md  0126-platform-8-3-27-format-research.md  README.md
spec/acceptance/: branched-development.md  unica-mcp-validation.md
spec/architecture/: change-checklist.md  code-patch-v1.md  extension-point-discovery.md  invariants.md
spec/contracts/: branched-development-tools.md
spec/decisions/: 0006-workspace-scoped-internal-services.md  0008-project-discovery-and-discovery-receipts.md  0008-public-marketplace-thin-runtime.md  0009-os-specific-code-behind-platform-facade.md  0010-ci-build-cache-and-artifact-flow.md  0011-canonical-dcs-domain.md  0012-read-only-extension-point-discovery.md  0012-safe-branched-development-for-1c-configuration-repositories.md  README.md
spec/designs/: 2026-07-22-local-1ci-guides-design.md  2026-07-25-object-navigation-model-prototype.md
tests/ci/: test_attributions.py  (+28 more)
(+279 files in other folders)
