[workspace]
members = ["crates/unica-bootstrap", "crates/unica-coder"]
resolver = "2"

[workspace.package]
version = "0.9.1"
edition = "2021"
license = "LGPL-3.0-or-later"
repository = "https://github.com/IngvarConsulting/unica"

[workspace.dependencies]
# In-process parser semantics must match the bundled analyzer; a contract test
# compares these resolved revisions with third-party/tools.lock.json.
bsl-parser = { package = "parser", git = "https://github.com/itrous/bsl-analyzer", rev = "9a6cb15d60c0381dce6a3b5e536434adb12da89b" }
bsl-syntax = { package = "syntax", git = "https://github.com/itrous/bsl-analyzer", rev = "9a6cb15d60c0381dce6a3b5e536434adb12da89b" }
diffy = "0.5.0"
fs2 = "0.4"
jsonschema = { version = "0.30", default-features = false }
flate2 = "1"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
roxmltree = "0.20"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "2.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }
