[package]
name = "unica-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "unica-bootstrap"
path = "src/main.rs"

[lib]
name = "unica_bootstrap"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true

