[package]
name = "unica-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "unica-bootstrap"
path = "src/main.rs"

[lib]
name = "unica_bootstrap"
path = "src/lib.rs"

[dependencies]
flate2.workspace = true
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
ureq.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
flate2.workspace = true
sha2.workspace = true
tar.workspace = true
uuid.workspace = true
