[package]
name = "unica-coder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "unica"
path = "src/main.rs"

[lib]
name = "unica_coder"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
roxmltree.workspace = true
rusqlite.workspace = true
sha2 = "0.10"
ureq.workspace = true
