[package]
name = "unica-coder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "unica"
path = "src/main.rs"

[lib]
name = "unica_coder"
path = "src/lib.rs"

[dependencies]
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
roxmltree.workspace = true
rusqlite.workspace = true
ureq.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Wdk_Foundation",
    "Wdk_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Kernel",
] }
