[package]
name = "unica-coder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "unica"
path = "src/main.rs"

[lib]
name = "unica_coder"
path = "src/lib.rs"

[dependencies]
bsl-parser.workspace = true
bsl-syntax.workspace = true
diffy.workspace = true
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
roxmltree.workspace = true
rusqlite.workspace = true
ureq.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
jsonschema.workspace = true
